--- a/css/first_index-CSS/media.css
+++ b/css/first_index-CSS/media.css
@@ -1,5 +1,23 @@
 @media (max-width: 1200px){
 
+    .burger__cards{
+     /* display: flex;
+    flex-direction: column;
+     width: 100%;
+    max-width: 324px; */
+    
+    height: 100%;
+    padding-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: minmax(320px, 370px) minmax(320px, 370px);
+    grid-template-rows: repeat(4, 524px);
+    grid-template-areas:
+        'a b'
+        'c d'
+        'e f'
+        'h i';
+    }
 }
 @media (max-width: 992px){
 
@@ -27,11 +45,13 @@
         height: 100%;
         row-gap: 10px;
         column-gap: 10px;
-        grid-template-columns: minmax(320px, 370px) minmax(320px, 370px) minmax(320px, 370px);
-        grid-template-rows: repeat(3, 524px);
-        grid-template-areas: 'a b c '
-                             'd e f '
-                             'g h i';
+        grid-template-columns: minmax(320px, 370px) minmax(320px, 370px);
+        grid-template-rows: repeat(4, 524px);
+        grid-template-areas:
+            'a b'
+            'c d'
+            'e f'
+            'h i';
     }
 
     .branches__title{
@@ -49,10 +69,10 @@
     }
 
     .bottom__nav_btn:focus~.nav__list{
-        transition: 0.3s;
+        display: block;
+        transition: 0.2s;
         background: black;
         width: 100%;
-        max-width: 770px;
         height: 100%;
         height: 300px;
         top: 74px;
